--- a/styles.css
+++ b/styles.css
@@ -138,6 +138,11 @@ height: 200px;
 object-fit: cover;
 border-radius: 10px;
 }
+
+.screenshots img:first-child {
+  transform: translateX(-5px);
+}
+
 .user-reviews {
   margin-top: 30px;
   padding: 20px;
@@ -180,3 +185,4 @@ border-radius: 10px;
   outline: none; /* Remove blue outline on click */
   box-shadow: none; /* Optional: remove any default shadow */
 }
+
